[project]
name = "calascii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
]
